--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     "tinyglobby": "^0.2.9"
   },
   "devDependencies": {
-    "@types/cli-color": "^2.0.6",
     "@types/is-glob": "^4.0.4",
     "@types/js-yaml": "^4.0.9",
     "@types/minimist": "^1.2.5",
@@ -69,7 +68,6 @@
     "ava": "^6.1.2",
     "browserify": "^17.0.0",
     "browserify-shim": "^3.8.16",
-    "cli-color": "^2.0.4",
     "concurrently": "^8.2.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
@@ -77,7 +75,8 @@
     "rimraf": "^5.0.5",
     "shx": "^0.3.4",
     "tsify": "^5.0.4",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "yoctocolors": "^2.1.1"
   },
   "ava": {
     "files": [
